--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node ./src/controllers/tests/routes.test.js | tap-spec",
-    "start": "nodemon ./server/",
-    "build": "node src/model/build.js"
+    "nodemon": "nodemon ./server/",
+    "build": "node src/model/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/FAC-Sixteen/week8-team-pigeonBot#readme",
   "devDependencies": {
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.2",
     "nodemon": "^1.18.11",
-    "serve-favicon": "^2.5.0",
     "supertest": "^4.0.2",
     "tap-spec": "^5.0.0",
     "tape": "^4.10.1"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "serve-favicon": "^2.5.0"
   }
 }
