--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Full-stack app using express and handlerbars. Facster-pedia, the ultimate source of information about facsters and their code editor of choice",
   "main": "index.js",
   "scripts": {
-    "test": "node ./src/controllers/tests/routes.test.js | tap-spec",
+    "test": "NODE_ENV=test tape src/tests/tests.js | tap-spec",
     "nodemon": "nodemon ./server/",
-    "build": "node src/model/server.js"
+    "build": "node src/model/db_build.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,10 @@
     "tape": "^4.10.1"
   },
   "dependencies": {
+    "env2": "^2.2.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "pg": "^7.10.0",
     "serve-favicon": "^2.5.0"
   }
 }
