link post request to query postEditor.js

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "tape": "^4.10.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "env2": "^2.2.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "pg": "^7.10.0",
+    "query-string": "^6.4.2",
     "serve-favicon": "^2.5.0"
   }
 }
